docker image formed
